WindGroup Dev/src/objects/AWS_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>AWS Credentials - Confidential, don&apos;t share with any one.</description>
    <fields>
        <fullName>Daily_Checklist_EndPoint__c</fullName>
        <label>Daily Checklist EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <defaultValue>&quot;http://52.77.211.113/api/oauth/access_token&quot;</defaultValue>
        <label>EndPoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Daily_Checklist_Pull_End_Datetime__c</fullName>
        <label>Last Daily Checklist Pull End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Daily_Checklist_Pull_Start_Datetime__c</fullName>
        <label>Last Daily Checklist Pull Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Pull_Datetime__c</fullName>
        <label>Last Pull Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Pull_End_Datetime__c</fullName>
        <label>Last Pull End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Push_End_Datetime__c</fullName>
        <label>Last Push End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Synch_Datetime__c</fullName>
        <label>Last Push Start Datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POSEndPoint__c</fullName>
        <label>POSEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PULL_FeedbackTransaction_EndDateTime__c</fullName>
        <label>PULL_FeedbackTransaction EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PULL_FeedbackTransaction_EndPoint__c</fullName>
        <label>PULL_FeedbackTransaction_EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PULL_FeedbackTransaction_StartDateTime__c</fullName>
        <label>PULL_FeedbackTransaction StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PULL_ReqTask_EndDateTime__c</fullName>
        <description>This field is for the end date time to pull the request and task object data.</description>
        <label>PULL ReqTask EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PULL_ReqTask_Endpoint__c</fullName>
        <description>This field is the url of the api job for request and task.</description>
        <label>PULL ReqTask Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PULL_ReqTask_StartDateTime__c</fullName>
        <description>This field request+task are for the start date time of records to be pull.</description>
        <label>PULL ReqTask StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PULL_TOHOTransaction_EndDateTime__c</fullName>
        <label>PULL_TOHOTransaction EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PULL_TOHOTransaction_Endpoint__c</fullName>
        <label>PULL_TOHOTransaction_Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PULL_TOHOTransaction_StartDateTime__c</fullName>
        <label>PULL_TOHOTransaction StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PULL_Toilet_Feedback_EndPoint__c</fullName>
        <label>PULL Toilet Feedback EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PULL_Toilet_Feedback_End_Datetime__c</fullName>
        <label>PULL Toilet Feedback End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PULL_Toilet_Feedback_Start_Datetime__c</fullName>
        <label>PULL Toilet Feedback Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_ElectricMeter_EndDateTime__c</fullName>
        <label>PUSH ElectricMeter EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_ElectricMeter_Endpoint__c</fullName>
        <label>PUSH ElectricMeter Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUSH_ElectricMeter_StartDateTime__c</fullName>
        <label>PUSH ElectricMeter StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_POSInfo_EndDateTime__c</fullName>
        <description>POS Information</description>
        <label>PUSH POSInfo EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_POSInfo_Endpoint__c</fullName>
        <description>POS Information</description>
        <label>PUSH POSInfo Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PUSH_POSInfo_StartDateTime__c</fullName>
        <description>POS Information</description>
        <label>PUSH POSInfo StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_ReqTask_EndDateTime__c</fullName>
        <description>This field is for the end date time to push the request and task object data.</description>
        <label>PUSH ReqTask EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_ReqTask_Endpoint__c</fullName>
        <description>This field is the url of the api job for request and task.</description>
        <label>PUSH ReqTask Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PUSH_ReqTask_StartDateTime__c</fullName>
        <description>This field request+task are for the start date time of records to be push.</description>
        <label>PUSH ReqTask StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_Setup_EndDateTime__c</fullName>
        <label>PUSH_Setup EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_Setup_EndPoint__c</fullName>
        <label>PUSH_Setup_EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PUSH_Setup_StartDateTime__c</fullName>
        <label>PUSH_Setup StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_Transaction_EndDateTime__c</fullName>
        <label>PUSH_Transaction EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PUSH_Transaction_Endpoint__c</fullName>
        <label>PUSH_Transaction Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PUSH_Transaction_StartDateTime__c</fullName>
        <label>PUSH_Transaction StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pull_EndPoint__c</fullName>
        <defaultValue>&quot;http://52.77.211.113/api/PushSFChecklistData&quot;</defaultValue>
        <label>Pull EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Push_EndPoint__c</fullName>
        <defaultValue>&quot;http://52.77.211.113/api/PullAWSChecklistStatus/&quot;</defaultValue>
        <label>Push EndPoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>clientid__c</fullName>
        <label>clientid</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientsecret__c</fullName>
        <label>clientsecret</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grant_type__c</fullName>
        <label>grant_type</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AWS Credentials</label>
</CustomObject>